# engenie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  help.html  help.md
assets/models/: imperial_male.glb
assets/models/BoxAnimated/glTF/: BoxAnimated.gltf
assets/models/Buggy/glTF/: Buggy.gltf
assets/models/CesiumMan/glTF/: CesiumMan.gltf
assets/models/Minimal/: minimal.gltf
assets/models/Monster/glTF/: Monster.gltf
assets/models/SimpleSparseAccessor/glTF/: SimpleSparseAccessor.gltf
assets/models/Triangle/glTF/: Triangle.gltf
assets/models/TwoSidedPlane/glTF/: TwoSidedPlane.gltf
assets/models/furniturekit/Models/GLTF format/: bookcaseClosed.gltf  televisionVintage.gltf
assets/models/gray_triangle/: gray_triangle.gltf
assets/models/nanosuit/: nanosuit.gltf
assets/models/woodenbox/: woodenbox.gltf
assets/shaders/: multiple_lights.frag  simple.vert
config/: config.json
include/: asset.hpp  camera.hpp  engine.hpp  entity.hpp  font.hpp  glsl.hpp  gltf.h  image.hpp  koura.hpp  lighting.h  material.hpp  mesh.hpp  model.hpp  object.hpp  scene.hpp  scene_manager.hpp  shader.hpp  stb_image_write.h  text.hpp  texture.hpp  tiny_gltf.h  viewport.hpp
src/: camera.cpp  engine.cpp  font.cpp  glsl.cpp  image.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  object.cpp  scene.cpp  scene_manager.cpp  shader.cpp  text.cpp  texture.cpp  viewport.cpp
